# apps/tourii-backend/src/service/builder/model-route-create-request-builder.ts
@@ -76,6 +76,7 @@ export class ModelRouteCreateRequestBuilder {
                 storyId: storyEntity.id,
                 routeName: dto.routeName,
                 region: storyEntity.sagaName,
+                regionDesc: dto.regionDesc,
                 regionLatitude: regionInfo.latitude,
                 regionLongitude: regionInfo.longitude,
                 regionBackgroundMedia: storyEntity.backgroundMedia,
