# etc/openapi/openapi.json
@@ -1798,6 +1798,10 @@
                     "description": "Region of the model route",
                     "type": "string"
                   },
+                  "regionDesc": {
+                    "description": "Description of the region",
+                    "type": "string"
+                  },
                   "recommendation": {
                     "description": "Recommendation of the model route",
                     "type": "array",
@@ -1870,6 +1874,7 @@
                   "storyId",
                   "routeName",
                   "region",
+                  "regionDesc",
                   "recommendation",
                   "touristSpotList"
                 ]
@@ -1897,6 +1902,10 @@
                 },
                 "region": {
                   "description": "Region of the model route",
+                  "type": "string"
+                },
+                "regionDesc": {
+                  "description": "Description of the region",
                   "type": "string"
                 },
                 "recommendation": {
@@ -2094,6 +2103,7 @@
                 "storyId",
                 "routeName",
                 "region",
+                "regionDesc",
                 "recommendation",
                 "regionLatitude",
                 "regionLongitude",
@@ -2841,6 +2851,10 @@
                     "description": "Region of the model route",
                     "type": "string"
                   },
+                  "regionDesc": {
+                    "description": "Description of the region",
+                    "type": "string"
+                  },
                   "recommendation": {
                     "description": "Recommendation of the model route",
                     "type": "array",
@@ -3036,6 +3050,7 @@
                   "storyId",
                   "routeName",
                   "region",
+                  "regionDesc",
                   "recommendation",
                   "regionLatitude",
                   "regionLongitude",
@@ -3142,6 +3157,10 @@
                 },
                 "region": {
                   "description": "Region of the model route",
+                  "type": "string"
+                },
+                "regionDesc": {
+                  "description": "Description of the region",
                   "type": "string"
                 },
                 "recommendation": {
@@ -3339,6 +3358,7 @@
                 "storyId",
                 "routeName",
                 "region",
+                "regionDesc",
                 "recommendation",
                 "regionLatitude",
                 "regionLongitude",
@@ -3974,6 +3994,10 @@
             "description": "Region of the model route",
             "type": "string"
           },
+          "regionDesc": {
+            "description": "Description of the region",
+            "type": "string"
+          },
           "recommendation": {
             "description": "Recommendation of the model route",
             "type": "array",
@@ -4046,6 +4070,7 @@
           "storyId",
           "routeName",
           "region",
+          "regionDesc",
           "recommendation",
           "touristSpotList"
         ]
@@ -4610,6 +4635,10 @@
             "description": "Region of the model route",
             "type": "string"
           },
+          "regionDesc": {
+            "description": "Description of the region",
+            "type": "string"
+          },
           "recommendation": {
             "description": "Recommendation of the model route",
             "type": "array",
@@ -4805,6 +4834,7 @@
           "storyId",
           "routeName",
           "region",
+          "regionDesc",
           "recommendation",
           "regionLatitude",
           "regionLongitude",
